--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,29 +1,43 @@
-<h1>Listing posts</h1>
+<div class="container">
+    <div id="latest-posts">
+      <div class="page-info">
+        <div class="page-title-container">
+          <h2 class="page-title circle-pink">Blog</h2>
+        </div>
+        <div class="page-desc-container">
+          <h4 class="page-desc">Speech-Tastic prides itself in creating great teaching materials at a great price</h4>
+        </div>
+      </div>
+      <%= link_to 'New Post', new_post_path, class: 'btn btn-success' %>
+      <% @posts.each do |post| %>
+      <div class="post row">
+        <div class="col-md-6 post-text">
+          <a href=""><h2><%= post.title %></h2></a>
+          <p class="date"><%= post.created_at.strftime('%B %e at %l:%M %p') %></p>
+          <p class="desc"><%= truncate(post.content, length: 250) %></p>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+          <ul class="socialcount socialcount-small" data-url="http://speech-tastic" data-counts="true" data-share-text="Speech-Tastic">
+            <li class="facebook"><a href="https://www.facebook.com/sharer/sharer.php?u=http://speech-tastic" title="Share on Facebook"><span class="social-icon icon-facebook"></span><span class="count">Like</span></a></li>
+            <li class="twitter"><a href="https://twitter.com/intent/tweet?text=http://speech-tastic" title="Share on Twitter"><span class="social-icon icon-twitter"></span><span class="count">Tweet</span></a></li>
+            <li class="googleplus"><a href="https://plus.google.com/share?url=http://speech-tastic" title="Share on Google Plus"><span class="social-icon icon-googleplus"></span><span class="count">+1</span></a></li>
+            <li class="pinterest"><a title="Pin It"><span class="social-icon icon-pinterest"></span><span class="count">Pin It</span></a></li>
+          </ul>
+        </div>
 
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.content %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        <div class="col-md-6">
+          <a href=""><%= image_tag "test-blog-image.png"%></a>
+        </div>
 
-<br>
 
-<%= link_to 'New Post', new_post_path %>
+
+
+      </div>
+          <ul class="admin-edits">
+            <li><%= link_to 'Edit', edit_post_path(post), class: 'btn btn-default' %></li>
+            <li><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></li>
+          </ul>
+          <div class="clearfix"></div>
+      <% end %>
+    </div>
+
+</div>
