--- a/app/assets/stylesheets/variables-mixins-defaults.css.scss
+++ b/app/assets/stylesheets/variables-mixins-defaults.css.scss
@@ -206,3 +206,16 @@ ul.social-buttons {
     }
   }
 }
+
+.footer {
+  margin-top: 25px;
+  background-color: $dark-blue;
+  color: white;
+  min-height: 50px;
+  padding: 20px;
+  a {
+    color: white;
+  }
+
+}
+
