Design and create the About page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,7 +13,9 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import 'socialcount-with-icons.min';
 @import 'variables-mixins-defaults';
 @import 'home';
 @import 'posts';
-@import 'socialcount-with-icons.min';
+@import 'about';
+
