--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,13 +9,13 @@
 
                     <ul class="list-inline intro-buttons">
                         <li>
-                            <a href="#/blog" class="btn btn-light-blue btn-lg">Blog</a>
+                            <a href="/posts" class="btn btn-light-blue btn-lg">Blog</a>
                         </li>
                         <li>
-                            <a href="#/store" class="btn btn-light-blue btn-lg">Store</a>
+                            <a href="/store" class="btn btn-light-blue btn-lg">Store</a>
                         </li>
                         <li>
-                            <a href="#/about" class="btn btn-light-blue btn-lg">About</a>
+                            <a href="/pages/about" class="btn btn-light-blue btn-lg">About</a>
                         </li>
                     </ul>
                 </div>
