--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -15,7 +15,7 @@
       <ul class="nav navbar-nav">
         <li><a href="/posts">Blog</a></li>
         <li><a href="#/store">Store</a></li>
-        <li><a href="#/about">About</a></li>
+        <li><a href="/pages/about">About</a></li>
       </ul>
     </div>
   </div>
