--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -14,7 +14,7 @@
     <div class="collapse navbar-collapse navbar-right" id="nav-links">
       <ul class="nav navbar-nav">
         <li><a href="/posts">Blog</a></li>
-        <li><a href="#/store">Store</a></li>
+        <li><a href="/store">Store</a></li>
         <li><a href="/pages/about">About</a></li>
       </ul>
     </div>
