--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -32,8 +32,8 @@
     <%= f.text_field :category %>
   </div>
   <div class="field">
-    <%= f.label :type %><br>
-    <%= f.text_field :type %>
+    <%= f.label :kind %><br>
+    <%= f.text_field :kind %>
   </div>
   <div class="actions">
     <%= f.submit %>
