--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,8 +26,8 @@
 </p>
 
 <p>
-  <strong>Type:</strong>
-  <%= @product.type %>
+  <strong>Kind:</strong>
+  <%= @product.kind %>
 </p>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
