--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,7 +29,7 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-lg-10 col-lg-offset-1">
-                <h2>What We Do</h2>
+                <h2>Ideas and Products to Make Your Life Easier</h2>
 
                 <div class="row">
                     <div class="col-md-6 col-sm-6">
