--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -5,6 +5,9 @@
       @extend .text-left;
       font-size: 1.4em;
       margin-top: 10px;
+      max-height: 200px;
+      overflow: hidden;
+
     }
   }
 }
