--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,9 +12,9 @@
       <% @posts.each do |post| %>
       <div class="post row">
         <div class="col-md-6 post-text">
-          <a href=""><h2><%= post.title %></h2></a>
+           <h2><%= link_to post.title, post %></h2>
           <p class="date"><%= post.created_at.strftime('%B %e at %l:%M %p') %></p>
-          <p class="desc"><%= truncate(post.content, length: 250) %></p>
+          <p class="desc"><%= post.content.html_safe %></p>
 
           <ul class="socialcount socialcount-small" data-url="http://speech-tastic" data-counts="true" data-share-text="Speech-Tastic">
             <li class="facebook"><a href="https://www.facebook.com/sharer/sharer.php?u=http://speech-tastic" title="Share on Facebook"><span class="social-icon icon-facebook"></span><span class="count">Like</span></a></li>
