--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New post</h1>
+<div id="post-form">
+    <h1>New post</h1>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Back', posts_path %>
+    <%= link_to 'Cancel', posts_path, class: "btn btn-danger cancel" %>
+</div>
