Add styles to Edit post page and update css naming for cancel button

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -32,7 +32,10 @@
 #post-form {
   @extend .center-block;
   width: 600px;
-  .cancel {
+  .btn-cancel {
+    margin-top: 10px;
+  }
+  .btn-show {
     margin-top: 10px;
   }
 }
