--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,5 +3,5 @@
 
     <%= render 'form' %>
 
-    <%= link_to 'Cancel', posts_path, class: "btn btn-danger cancel" %>
+    <%= link_to 'Cancel', posts_path, class: "btn btn-danger btn-cancel" %>
 </div>
