--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing post</h1>
+<div id="post-form">
+    <h1>Editing post</h1>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+    <%= button_to 'Show', @post, class: "btn btn-warning btn-show" %>
+    <%= button_to 'Cancel', posts_path, class: "btn btn-danger btn-cancel" %>
+</div>
