--- a/app/assets/stylesheets/variables-mixins-defaults.css.scss
+++ b/app/assets/stylesheets/variables-mixins-defaults.css.scss
@@ -37,6 +37,9 @@ $color-text:        #555555;
 $color-background:  #ffffff;
 $color-border:      lighten(#555555, 50%);
 
+// Sizes
+
+$content-width-large: 960px;
 
 // Mix-ins
 
