--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -3,6 +3,6 @@
 
     <%= render 'form' %>
 
-    <%= button_to 'Show', @post, class: "btn btn-warning btn-show" %>
-    <%= button_to 'Cancel', posts_path, class: "btn btn-danger btn-cancel" %>
+    <%= link_to 'Show', @post, class: "btn btn-warning btn-show" %>
+    <%= link_to 'Cancel', posts_path, class: "btn btn-danger btn-cancel" %>
 </div>
