Style product edit/new form and show pages.  Move some css to defaults

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -10,32 +10,30 @@
       </ul>
     </div>
   <% end %>
+    <div class="form-group">
+      <label for="title">Title</label>
+      <%= f.text_field :title, class: "form-control", id: "title"%>
+    </div>
 
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
-  </div>
-  <div class="field">
-    <%= f.label :image_url %><br>
-    <%= f.text_field :image_url %>
-  </div>
-  <div class="field">
-    <%= f.label :link %><br>
-    <%= f.text_field :link %>
-  </div>
-  <div class="field">
-    <%= f.label :category %><br>
-    <%= f.text_field :category %>
-  </div>
-  <div class="field">
-    <%= f.label :kind %><br>
-    <%= f.text_field :kind %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <div class="form-group">
+      <label for="description">Description</label>
+      <%= f.text_area :description, class: "form-control", id: "description"%>
+    </div>
+    <div class="form-group">
+      <label for="image_url">Image URL</label>
+      <%= f.text_field :image_url, class: "form-control", id: "image_url"%>
+    </div>
+    <div class="form-group">
+      <label for="link">Link</label>
+      <%= f.text_field :link, class: "form-control", id: "link"%>
+    </div>
+    <div class="form-group">
+      <label for="category">Category</label>
+      <%= f.text_field :category, class: "form-control", id: "category"%>
+    </div>
+    <div class="form-group">
+      <label for="title">Kind</label>
+      <%= f.text_field :kind, class: "form-control", id: "kind"%>
+    </div>
+    <%= f.submit class: "btn btn-success" %>
 <% end %>
