--- a/app/assets/stylesheets/variables-mixins-defaults.css.scss
+++ b/app/assets/stylesheets/variables-mixins-defaults.css.scss
@@ -227,3 +227,15 @@ ul.social-buttons {
 
 }
 
+
+#post-form {
+  @extend .center-block;
+  width: $content-width-large;
+  .btn-cancel {
+    margin-top: 10px;
+  }
+  .btn-show {
+    margin-top: 10px;
+  }
+}
+
