--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New product</h1>
+<div id="post-form">
+    <h1>New product</h1>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Back', products_path %>
+    <%= link_to 'Back', products_path, class: "btn btn-danger btn-cancel"  %>
+</div>
