--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,34 +1,19 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @product.title %>
-</p>
+<div id="product-show">
+  <div class="product-group">
+    <div class="product">
+      <div class="product-info">
+        <%= image_tag @product.image_url, class: "center-block"%>
+        <div class="title"><%= @product.title %></div>
+        <p class="desc"><%= @product.description %></p>
+      </div>
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
-
-<p>
-  <strong>Image url:</strong>
-  <%= @product.image_url %>
-</p>
-
-<p>
-  <strong>Link:</strong>
-  <%= @product.link %>
-</p>
-
-<p>
-  <strong>Category:</strong>
-  <%= @product.category %>
-</p>
-
-<p>
-  <strong>Kind:</strong>
-  <%= @product.kind %>
-</p>
-
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+      <a href="<%= @product.link %>" class="btn btn-product">Learn More</a>
+      <ul class="admin-store-edits">
+        <li><%= link_to 'Edit', edit_product_path(@product), class: 'btn btn-default' %></li>
+        <li><%= link_to 'Destroy', @product, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></li>
+      </ul>
+    </div>
+  </div>
+</div>
