Update look of homepage and logo

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
             <div class="col-lg-12">
                 <div class="intro-message">
                     <h1>Speech-Tastic</h1>
-                    <h3>All of Your Therepy Needs</h3>
+                    <h3>All of Your Speech Therepy Needs</h3>
 
                     <ul class="list-inline intro-buttons">
                         <li>
@@ -29,10 +29,11 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-lg-10 col-lg-offset-1">
-                <h2>Ideas and Products to Make Your Life Easier</h2>
+
 
                 <div class="row">
                     <div class="col-md-6 col-sm-6">
+                      <h1 class="h1-home">Ideas to Inspire Your Creativity</h1>
                         <div class="service-item">
                             <span>
                               <%= image_tag "home/blog-square.png", class: "circle"  %>
@@ -45,6 +46,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-6">
+                        <h1 class="h1-home">Products to Make Your Life Easier</h1>
                         <div class="service-item">
                             <span>
                               <%= image_tag "home/store-square.png", class: "circle"  %>
@@ -53,7 +55,7 @@
                                 <strong>Store</strong>
                             </h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                            <a href="#" class="btn btn-pink">Buy Now!</a>
+                            <a href="#" class="btn btn-pink">Shop The Store</a>
                         </div>
                     </div>
                 </div>
