--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -31,6 +31,11 @@
   background: none;
 }
 
+.h1-home {
+  max-width: 300px;
+  margin: 1em auto;
+}
+
 @media(max-width:767px) {
   .intro-message {
     padding-bottom: 5%;
