--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">
-        <%= image_tag "title.png" %>
+        <%= image_tag "logo_min_sm.png" %>
       </a>
     </div>
     <div class="collapse navbar-collapse navbar-right" id="nav-links">
