--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,32 +10,36 @@
       </div>
       <%= link_to 'New Post', new_post_path, class: 'btn btn-success' %>
       <% @posts.each do |post| %>
-      <div class="post row">
-        <div class="col-md-6 post-text">
+      <div class="post">
+        <div class="post-text">
            <h2><%= link_to post.title, post %></h2>
           <p class="date"><%= post.created_at.strftime('%B %e at %l:%M %p') %></p>
-          <p class="desc"><%= post.content.html_safe %></p>
 
-          <ul class="socialcount socialcount-small" data-url="http://speech-tastic" data-counts="true" data-share-text="Speech-Tastic">
-            <li class="facebook"><a href="https://www.facebook.com/sharer/sharer.php?u=http://speech-tastic" title="Share on Facebook"><span class="social-icon icon-facebook"></span><span class="count">Like</span></a></li>
-            <li class="twitter"><a href="https://twitter.com/intent/tweet?text=http://speech-tastic" title="Share on Twitter"><span class="social-icon icon-twitter"></span><span class="count">Tweet</span></a></li>
-            <li class="googleplus"><a href="https://plus.google.com/share?url=http://speech-tastic" title="Share on Google Plus"><span class="social-icon icon-googleplus"></span><span class="count">+1</span></a></li>
-            <li class="pinterest"><a title="Pin It"><span class="social-icon icon-pinterest"></span><span class="count">Pin It</span></a></li>
-          </ul>
-        </div>
+          <div class="row">
+            <div class="col-xs-2">
+              <ul class="socialcount socialcount-small" data-url="http://speech-tastic" data-counts="true" data-share-text="Speech-Tastic">
+                <li class="facebook"><a href="https://www.facebook.com/sharer/sharer.php?u=http://speech-tastic" title="Share on Facebook"><span class="social-icon icon-facebook"></span><span class="count">Like</span></a></li>
+                <li class="twitter"><a href="https://twitter.com/intent/tweet?text=http://speech-tastic" title="Share on Twitter"><span class="social-icon icon-twitter"></span><span class="count">Tweet</span></a></li>
+                <li class="googleplus"><a href="https://plus.google.com/share?url=http://speech-tastic" title="Share on Google Plus"><span class="social-icon icon-googleplus"></span><span class="count">+1</span></a></li>
+                <li class="pinterest"><a title="Pin It"><span class="social-icon icon-pinterest"></span><span class="count">Pin It</span></a></li>
+              </ul>
+            </div>
+            <div class="col-xs-10">
+              <p class="desc"><%= post.content.html_safe %></p>
+            </div>
+          </div>
 
-        <div class="col-md-6">
-          <a href=""><%= image_tag "test-blog-image.png"%></a>
-        </div>
 
 
 
-
-      </div>
           <ul class="admin-edits">
             <li><%= link_to 'Edit', edit_post_path(post), class: 'btn btn-default' %></li>
             <li><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></li>
           </ul>
+        </div>
+
+      </div>
+
           <div class="clearfix"></div>
       <% end %>
     </div>
