--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -5,9 +5,9 @@
 
     <% if @post.published %>
 
-      <%= link_to 'Unpublish', unpublish_post_path(@post), method: :put, class: "btn btn-warning btn-show" %>
+      <%= link_to 'Unpublish', unpublish_post_path(@post), method: :post, class: "btn btn-warning btn-show" %>
     <% else %>
-      <%= link_to 'Publish', publish_post_path(@post), method: :put, class: "btn btn-success btn-show" %>
+      <%= link_to 'Publish', publish_post_path(@post), method: :post, class: "btn btn-success btn-show" %>
     <% end %>
     <%= link_to 'Cancel', posts_path, class: "btn btn-danger btn-cancel" %>
 </div>
