--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,7 +13,7 @@
       <div class="post">
         <div class="post-text">
            <h2><%= link_to post.title, post %></h2>
-          <p class="date"><%= post.created_at.strftime('%B %e at %l:%M %p') %></p>
+          <div class="date"><%= post.created_at.strftime('%B %e at %l:%M %p') %></div>
 
           <div class="row">
             <div class="col-xs-2">
@@ -25,7 +25,9 @@
               </ul>
             </div>
             <div class="col-xs-10">
-              <p class="desc"><%= post.content.html_safe %></p>
+              <div class="desc truncate lines-8">
+                <%= post.content.html_safe %>
+              </div>
             </div>
           </div>
 
