--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,6 +2,17 @@
 <div id="post">
   <h1><%= @post.title %></h1>
   <div class="date"><%= @post.created_at.strftime('%B %e at %l:%M %p') %></div>
+
+  <ul class="list-inline social-buttons" data-url="http://www.speech-tastic.com" data-counts="true" data-share-text="<%= @post.title %>">
+    <li class="facebook"><a href="https://www.facebook.com/sharer/sharer.php?u=http://www.speech-tastic.com" title="Share on Facebook"><i class="fa fa-facebook"></i><span class="count"></span></a></li>
+    <li class="twitter"><a href="https://twitter.com/intent/tweet?text=http://www.speech-tastic.com" title="Share on Twitter"><i class="fa fa-twitter"></i><span class="count"></span></a></li>
+    <li class="googleplus"><a href="https://plus.google.com/share?url=http://www.speech-tastic.com" title="Share on Google Plus"><i class="fa fa-google-plus"></i><span class="count"></span></a></li>
+    <li class="pinterest"><a title="Pin It"><i class="fa fa-pinterest-p"></i><span class="count"></span></a></li>
+    <li class="linkedin"><a href=""><i class="fa fa-linkedin"></i><span class="count"></span></a></li>
+
+
+  </ul>
+
   <hr>
   <div class="post-content">
     <%= @post.content.html_safe %>
