--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
 </head>
 <body>
 <%= render 'layouts/nav' %>
+<%= render partial: "shared/flash_messages", flash: flash %>
+
 <%= yield %>
 <%= render 'layouts/footer' %>
 </body>
