--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,7 +18,10 @@
     <%= @post.content.html_safe %>
   </div>
 
-  <%= link_to 'Edit', edit_post_path(@post), class: "btn btn-default btn-edit" %>
+  <% if user_signed_in? %>
+    <%= link_to 'Edit', edit_post_path(@post), class: "btn btn-default btn-edit" %>
+  <% end %>
+
 </div>
 
 
