Add CanCanCan and setup posts for authentication

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -16,6 +16,11 @@
         <li><a href="/posts">Blog</a></li>
         <li><a href="/store">Store</a></li>
         <li><a href="/pages/about">About</a></li>
+        <% if user_signed_in? %>
+            <li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></li>
+        <% else %>
+            <li><%= link_to('Login', new_user_session_path) %></li>
+        <% end %>
       </ul>
     </div>
   </div>
