Add authentication to Products

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,7 +9,7 @@
         </div>
       </div>
 
-      <% if can? :create, @post %>
+      <% if can? :create, Post %>
         <%= link_to 'New Post', new_post_path, class: 'btn btn-success' %>
       <% end %>
 
