--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,10 +10,12 @@
       </div>
 
       <a href="<%= @product.link %>" class="btn btn-product">Learn More</a>
-      <ul class="admin-store-edits">
-        <li><%= link_to 'Edit', edit_product_path(@product), class: 'btn btn-default' %></li>
-        <li><%= link_to 'Destroy', @product, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></li>
-      </ul>
+      <% if can? :update, @product %>
+          <ul class="admin-store-edits">
+            <li><%= link_to 'Edit', edit_product_path(@product), class: 'btn btn-default' %></li>
+            <li><%= link_to 'Destroy', @product, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></li>
+          </ul>
+      <% end %>
     </div>
   </div>
 </div>
