--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -1,51 +1,17 @@
 #latest-posts {
   margin-top: 10px;
-  .post {
-    max-width: 800px;
-    margin: 0.5em auto;
-    h2 {
-      @extend .text-center;
-    }
-
-    .date {
-      @extend .text-center;
-    }
-
-
-    .desc {
-      font-size: $post-content-font-size;
-      margin-top: 0.8em;
-    }
-    .social-buttons{
-      li {
-        list-style: none;
-        margin-top: 0.5em;
-        a {
-          background-color: $blue-gray;
-          color: #ffffff;
-          &:hover {
-            background-color: $pink;
-            color: white;
-          }
-        }
-      }
-    }
-  }
 }
 
 
-#post {
+.post {
   @extend .center-block;
-  padding: 10px;
-  h1 {
-    @extend .text-center;
+  .title {
+    text-align: center;
   }
+  padding: 10px;
   .date {
     @extend .text-center;
     margin-bottom: 1em;
-  }
-  .post-content {
-    font-size: $post-content-font-size;
   }
 
   .btn-edit {
@@ -70,6 +36,35 @@
         }
       }
     }
+  }
+}
+
+.post-content {
+  font-size: $post-content-font-size;
+  h1 {
+    font-size: $post-content-font-size*1.8;
+    font-weight: 500;
+    text-align: left;
+  }
+  h2 {
+    font-size: $post-content-font-size*1.6;
+    font-weight: 500;
+  }
+  h3 {
+    font-size: $post-content-font-size*1.4;
+    font-weight: 500;
+  }
+  h4 {
+    font-size: $post-content-font-size*1.3;
+    font-weight: 300;
+  }
+  h5 {
+    font-size: $post-content-font-size*1.2;
+    font-weight: 300;
+  }
+  h6 {
+    font-size: $post-content-font-size*1.1;
+    font-weight: 300;
   }
 }
 
