--- a/app/views/shared/_post_header.html.erb
+++ b/app/views/shared/_post_header.html.erb
@@ -1,3 +1,4 @@
 <h1 class="title"><%= link_to post.title, post %></h1>
+<div class="author">by <%= post.user.first_name + " " + post.user.last_name %></div>
 <div class="date"><%= post.created_at.strftime('%B %e at %l:%M %p') %></div>
 <%= render partial: 'shared/social_buttons', locals: { title: post.title } %>
