Fix the social buttons on the bottom of the page

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,14 +5,7 @@
         <span class="copyright">Copyright &copy; Speech-Tastic 2014</span>
       </div>
       <div class="col-md-4">
-        <ul class="list-inline social-buttons">
-          <li><a href="#"><i class="fa fa-twitter"></i></a>
-          </li>
-          <li><a href="#"><i class="fa fa-facebook"></i></a>
-          </li>
-          <li><a href="#"><i class="fa fa-linkedin"></i></a>
-          </li>
-        </ul>
+        <%= render partial: "shared/social_buttons", locals: {title: "Speech-Tastic.com", url: "http://www.speech-tastic.com"} %>
       </div>
       <div class="col-md-4">
         <ul class="list-inline quicklinks">
