--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Admin controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.admin {
+  .posts {
+    max-width: 450px;
+    .item-title {
+      font-size: 1.8em;
+
+    }
+  }
+
+}
