--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,2 +1,20 @@
-<h1>Admin#index</h1>
-<p>Find me in app/views/admin/index.html.erb</p>
+<div class="container admin">
+  <h2>Blog Posts</h2>
+  <% if can? :create, Post %>
+      <%= link_to 'New Post', new_post_path, class: 'btn btn-success' %>
+  <% end %>
+    <div class="posts">
+        <% @posts.each do |post| %>
+            <div class="post">
+              <div class="panel panel-default">
+                <div class="panel-body">
+                  <div class="row">
+                    <div class="item-title col-md-7"><%= link_to post.title, post %></div>
+                    <div class="col-md-5"><%= render partial: "shared/post_maintenance", locals: {post: post} %></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+        <% end %>
+    </div>
+</div>
